--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="logo">MG</div>
         <div>
           <div class="company">MG Solutions</div>
-          <small>Employee Identity Card</small>
+          <small>Employee Identity</small>
         </div>
       </div>
       <div class="id-body">
@@ -318,3 +318,4 @@
   </script>
 </body>
 </html>
+
