--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
   <div class="panel">
     <h2>MG Solutions — ID Card Generator</h2>
     <label for="fullName">Full name</label>
-    <input id="fullName" type="text" placeholder="e.g. M. Gokul Kalyan" value="">
+    <input id="fullName" type="text" placeholder="enter the name" value="">
 
     <div class="row">
       <div style="flex:1">
         <label for="age">Age</label>
-        <input id="age" type="number" placeholder="e.g. 22" min="0">
+        <input id="age" type="number" placeholder="enter the Age" min="0">
       </div>
       <div style="width:140px">
         <label for="empid">Employee ID</label>
@@ -318,4 +318,5 @@
   </script>
 </body>
 </html>
+
 
